--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
 test/mx56/javasource/
 test/mx515/javasource/
+test/mx517/javasource/
 test/mx56/deployment/
 test/mx515/deployment/
+test/mx517/deployment/
 test/mx56/.classpath
 test/mx515/.classpath
+test/mx517/.classpath
 test/mx56/.project
 test/mx515/.project
+test/mx517/.project
 *.launch
 *.tmp
 *.lock
 .idea/
 *.bak
+*.mda
