Added Test for Mx 5.21 and Mx6.4
All seems to be fine... Still waiting for that one day.. we dont need it
anymore...

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
-test/mx56/javasource/
-test/mx515/javasource/
-test/mx517/javasource/
-test/mx56/deployment/
-test/mx515/deployment/
-test/mx517/deployment/
-test/mx56/.classpath
-test/mx515/.classpath
-test/mx517/.classpath
-test/mx56/.project
-test/mx515/.project
-test/mx517/.project
+test/*/javasource/
+test/*/deployment/
+test/*/.classpath
+test/*/.project
 *.launch
 *.tmp
 *.lock
 .idea/
 *.bak
 *.mda
+test/CleanDeployment.bat
